# lsh-protocol

./: .gitignore  AI_FORMAT.md  LICENSE  README.md  SPEC.md  pyproject.toml
docs/: migration.md
examples/python/: basic_usage.py
implementations/python/lsh/: __init__.py  coord.py  core.py  properties.py  sync.py  validation.py
implementations/python/lsh/tools/: __init__.py  generate_schema.py  generate_snippets.py  generate_typescript.py
