[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lsh-protocol"
version = "2.6.0"
description = "Li Shi Hang View Synchronization Protocol - A protocol for virtual world view synchronization"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Li Hengbo", email = "lihengbo@example.com"}
]
keywords = [
    "protocol",
    "virtual-world",
    "view-synchronization",
    "spatial",
    "3d",
    "digital-twin",
    "smart-home",
    "metaverse"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.urls]
Homepage = "https://github.com/your-repo/lsh-protocol"
Documentation = "https://github.com/your-repo/lsh-protocol#readme"
Repository = "https://github.com/your-repo/lsh-protocol.git"
Issues = "https://github.com/your-repo/lsh-protocol/issues"

[tool.setuptools.packages.find]
where = ["implementations/python"]
